# MegaHack-Recolor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  about.md  changelog.md  compile.bat  mod.json  r.bat
env/: GMD_PATH  MOD_LDER  MOD_NAME  VER_MSVC
src/: animationhandler.cpp  animationhandler.hpp  colorfade.cpp  colorfade.hpp  errorcodes.cpp  errorcodes.hpp  gui.cpp  gui.hpp  main.cpp  manager.cpp  manager.hpp  mhcolor.cpp  mhcolor.hpp  mhinfo.cpp  mhinfo.hpp  mhmenu.cpp  mhmenu.hpp  mhrecolor.hpp  savedata.cpp  savedata.hpp
